// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/ChatMessageAvatar renders correctly isNotMe 1`] = `
<View
  style={
    {
      "alignSelf": "flex-start",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "marginVertical": 6,
        "opacity": 1,
        "paddingRight": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "center",
            "borderRadius": 18,
            "height": 36,
            "justifyContent": "center",
            "width": 36,
          },
          {
            "backgroundColor": "#2B78EE",
          },
          undefined,
          {
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#FFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 21,
            },
            undefined,
          ]
        }
      >
        ИП
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignSelf": "flex-start",
        "flexDirection": "row",
        "maxWidth": "90%",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#FFF",
          "borderBottomLeftRadius": 0,
          "borderBottomRightRadius": 15,
          "borderRadius": 15,
          "marginVertical": 6,
        }
      }
    >
      <View
        style={
          {
            "paddingBottom": 6,
            "paddingHorizontal": 15,
            "paddingTop": 12,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#444B5A",
                "fontFamily": "Inter-Regular",
                "fontSize": 21,
                "lineHeight": 27,
              },
              undefined,
            ]
          }
        >
          message
        </Text>
      </View>
      <View
        style={
          {
            "alignSelf": "flex-end",
            "paddingBottom": 12,
            "paddingHorizontal": 9,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#9BA1B0",
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 21,
              },
              undefined,
            ]
          }
        >
          12:12
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`@lad-tech/mobydick-core/ChatMessageAvatar renders correctly onPress 1`] = `
<View
  style={
    {
      "alignSelf": "flex-end",
      "flexDirection": "row",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignSelf": "flex-end",
        "marginVertical": 6,
        "opacity": 1,
        "paddingRight": 12,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "center",
            "borderRadius": 18,
            "height": 36,
            "justifyContent": "center",
            "width": 36,
          },
          {
            "backgroundColor": "#2B78EE",
          },
          undefined,
          {
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#FFF",
              "fontFamily": "Inter-Regular",
              "fontSize": 15,
              "lineHeight": 21,
            },
            undefined,
          ]
        }
      >
        ИП
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignSelf": "flex-end",
        "flexDirection": "row",
        "maxWidth": "90%",
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "#2B78EE",
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 0,
          "borderRadius": 15,
          "marginVertical": 6,
        }
      }
    >
      <View
        style={
          {
            "paddingBottom": 6,
            "paddingHorizontal": 15,
            "paddingTop": 12,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "#FFF",
                "fontFamily": "Inter-Regular",
                "fontSize": 21,
                "lineHeight": 27,
              },
              undefined,
            ]
          }
        >
          message
        </Text>
      </View>
      <View
        style={
          {
            "alignSelf": "flex-end",
            "paddingBottom": 12,
            "paddingHorizontal": 9,
          }
        }
      >
        <Text
          allowFontScaling={true}
          style={
            [
              {
                "color": "rgba(255, 255, 255, 0.75)",
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 21,
              },
              undefined,
            ]
          }
        >
          12:12
        </Text>
      </View>
    </View>
  </View>
</View>
`;
